<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loaning</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Insert loan -->
    <string name="borrow_label">I borrowed...</string>
    <string name="loan_label">I loaned...</string>
    <string name="i_owe_label">I owe...</string>
    <string name="destination_label">To/From</string>
    <string name="loan_object_label">What</string>
    <string name="when_label">Notify me on </string>
    <string name="add_button">save</string>
    <string name="add_loan_fragment_title">add</string>
    <string name="amount_label">Amount</string>
    <string name="currency_label">Currency</string>
    <string name="I_loaned_label">I loaned</string>
    <string name="I_borrowed_label">I borrowed</string>
    <string name="to_label">To</string>
    <string name="for_label">For</string>
    <string name="from_label">From</string>
    <string name="reminder_label">Reminder on :</string>
    

    <!-- View loan list -->
    <string name="loan_list_title">My loans</string>
    
    <!-- Filter loans fragment -->
    <string name="filter_loans_fragment_title">Filter loans</string>
    <string name="filter_loans_fragment_name_label">Name :</string>
    
    <!-- Loan editable detail -->
    <string name="date_label">When : </string>
    <string name="object_of_loan_label">What : </string>
    <string name="reminder_label">Remind me on : </string>
    <string name="delete_button">Delete</string>
    <string name="settle_button">Settle</string>
    
    <!-- left nav menu -->
    <string name="item_one">Loans overview</string>
    <string name="item_two">Loans history</string>
    <string name="item_three">Add loan</string>
    <string name="item_four">Common pot</string>
    <string name="item_five">Settings</string>
    
    <!-- confirmation dialogs -->
    <string name="confirmation_settle">Are you sure you want to settle this loan ?</string>
    <string name="confirmation_delete">Are you sure you want to delete this loan ?</string>
    <string name="confirmation_settle_all">Are you sure you want to settle all these loans ?</string>
    <string name="confirmation_delete_all">Are you sure you want to delete all these loans ?</string>
    
    <!-- currencies -->
    <string name="currencies_prompt">Choose a currency</string>
    
</resources>