<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLoanActivity" >

<!--     <DatePicker -->
<!--         android:id="@+id/chooseWhen" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_above="@+id/addLoanButton" -->
<!--         android:layout_alignLeft="@+id/whenLabel" -->
<!--         android:layout_below="@+id/whenLabel" /> -->

<!--     <CheckedTextView -->
<!--         android:id="@+id/whenLabel" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@+id/destination" -->
<!--         android:layout_below="@+id/destination" -->
<!--         android:text="@string/when_label" /> -->

    <EditText
        android:id="@+id/description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/I_loaned_label"
        android:layout_below="@+id/I_loaned_label"
        android:ems="10"
        android:hint="@string/loan_object_label" />

    <TextView
        android:id="@+id/I_loaned_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/I_loaned_label" />

    <EditText
        android:id="@+id/person_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description_field"
        android:layout_below="@+id/description_field"
        android:ems="10"
        android:hint="@string/to_label" />

    <Button
        android:id="@+id/addLoanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/I_loaned_label"
        android:layout_marginBottom="26dp"
        android:onClick="addLoan"
        android:text="@string/add_button" />

</RelativeLayout>