<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/I_borrowed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/borrow_label"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/text_box"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp" >

        <!-- <DatePicker -->
        <!-- android:id="@+id/chooseWhen" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_above="@+id/addLoanButton" -->
        <!-- android:layout_alignLeft="@+id/whenLabel" -->
        <!-- android:layout_below="@+id/whenLabel" /> -->


        <!-- <CheckedTextView -->
        <!-- android:id="@+id/whenLabel" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignLeft="@+id/destination" -->
        <!-- android:layout_below="@+id/destination" -->
        <!-- android:text="@string/when_label" /> -->

        <EditText
            android:id="@+id/description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/loan_object_label" />

        <EditText
            android:id="@+id/person_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/from_label" />

        <Button
            android:id="@+id/addLoanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="190dp"
            android:onClick="saveLoan"
            android:text="@string/add_button" />
    </LinearLayout>

</LinearLayout>